# AI_MBSE_Capstone_Project

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: docs.yml
backend/: .env  pyproject.toml
backend/app/: __init__.py  main.py  mcp_server.py
backend/app/api/: routes.py
backend/app/api/v1/: analyze.py  health.py  jobs.py  models.py  models_read.py  rag.py  rag_stream.py  schemas.py
backend/app/api/v1/serializers/: analysis.py  jobs.py
backend/app/artifacts/evidence/: api.py  assembler.py  types.py  writer.py
backend/app/artifacts/intelligence/cards/: assembler.py  coerce.py  rag_types.py
backend/app/artifacts/intelligence/client/: ollama_client.py  ollama_http.py  ollama_options.py
backend/app/artifacts/intelligence/context/: pack.py  prompts.py  retrieve.py  service.py
backend/app/artifacts/rag/: build_index.py  db.py  diagnostics.py  llm.py  pack.py  prompts.py  query_normalizer.py  retrieve.py  schema.sql  service.py
backend/app/artifacts/rag/client/: ollama_client.py  ollama_http.py  ollama_options.py  protocols.py
backend/app/core/: config.py  jobs_db.py  lifespan.py  logging.py  logging_config.py  orchestrator.py  paths.py
backend/app/criteria/: loader.py  protocols.py  runner.py  utils.py
backend/app/criteria/mml_1/: predicate_count_tables.py
backend/app/criteria/mml_2/: predicate_block_has_port.py  predicate_nonempty_names.py
backend/app/criteria/mml_3/: predicate_ports_typed.py
backend/app/evidence/: api.py  builder.py  types.py  writer.py
backend/app/flow/: evidence_stage.py  ingest_stage.py  orchestrator.py  predicate_stage.py  rag_stage.py
backend/app/flow/ingest/: build_ir.py  discover_schema.py  duckdb_connection.py  errors.py  loader_duckdb.py  normalize_rows.py
backend/app/infra/core/: config.py  jobs_db.py  lifespan.py  logging_config.py  paths.py
backend/app/infra/io/: write_summary.py
backend/app/infra/utils/: hashing.py  logging_extras.py  maintenance.py
backend/app/ingest/: build_ir.py  discover_schema.py  duckdb_connection.py  duckdb_utils.py  jsonl_writer.py  loader_duckdb.py  normalize_rows.py  schema_config.py  types.py
backend/app/input_adapters/: protocols.py  router.py
backend/app/input_adapters/sparx/v17_1/: adapter.py
backend/app/interface/api/: routes.py
backend/app/interface/api/v1/: analyze.py  get_model.py  health.py  jobs.py  models.py  rag.py  rag_stream.py
backend/app/interface/api/v1/serializers/: analysis.py
backend/app/interface/bridge/: analysis.py  get_model.py  jobs.py
backend/app/knowledge/adapters/: router.py
backend/app/knowledge/adapters/sparx/v17_1/: adapter.py
backend/app/knowledge/criteria/: build_summary.py  loader.py  protocols.py  runner.py  summary_service.py  utils.py
backend/app/knowledge/criteria/mml_1/: predicate_count_tables.py
backend/app/knowledge/criteria/mml_2/: predicate_block_has_port.py  predicate_nonempty_names.py
backend/app/knowledge/diagnostics/: missing_ports.py
backend/app/rag/: bootstrap_index.py  db.py  llm.py  pack.py  prompts.py  retrieve.py  service.py  types.py
backend/app/rag/client/: ollama_client.py  protocols.py
backend/app/services/: analysis.py  bff_summary.py  chat.py  ingestion.py  jobs.py  llm_tools.py  models_read.py  reporting.py
backend/app/tempdb/: api.py  loader.py  schema.sql
backend/app/utils/: hashing.py  logging_extras.py  timing.py
backend/docs/: conf.py  index.rst
backend/docs/_apidoc_tpl/: package.rst_t
backend/ops/docs/: .gitkeep
backend/ops/tests/fixtures/sparx/17_1/: test_build_index_views.py  test_get_model_contract.py  test_get_model_payload_dump.py  test_health.py  test_llm_explainer.py  test_retrieval_preview.py
backend/ops/tools/: clear pycache.txt  count_py_lines.py  eval_llm_explainer.py  run_pipeline.py
backend/samples/sparx/v17_1/: Car_System.xml  DellSat-77_System.xml
backend/src/maturity_platform/api/: README.md
backend/tests/: find_duplicates.py  ingest_and_verify.py  test_agent.py  verify_block.py
backend/tests/fixtures/sparx/17_1/: test_health.py  test_tempdb_loader.py
backend/tools/: run_pipeline.py
blueprint/: STRUCTURE.md  SYSTEM_OVERVIEW.md
blueprint/diagrams/diagram_code/: mindmap.txt  pipeline_overview.txt  request_result_flow.txt  simplified_system_overview.txt  system_architecture.txt
contracts/v1/: analyze_response.schema.json  api_contract.md
contracts/v1/examples/: analyze_response.ok.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/.storybook/: preview.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/components/: index.tsx
frontend/src/app/components/chat/chat-message/: chat-message.css  chat-message.stories.tsx  chat-message.tsx
frontend/src/app/components/chat/chat-panel/: chat-panel.css  chat-panel.stories.tsx  chat-panel.tsx
frontend/src/app/components/results/: results-panel.css  results-panel.stories.tsx  results-panel.tsx
frontend/src/app/components/shared/file-drop/: file-drop.css  file-drop.stories.tsx  file-drop.tsx
frontend/src/app/components/shared/navigation/: navigation.css  navigation.stories.tsx  navigation.tsx
frontend/src/app/components/upload-wizard/: upload-wizard.css  upload-wizard.stories.tsx  upload-wizard.tsx
frontend/src/app/components/upload-wizard/components/upload-item-status/: upload-item-status.css  upload-item-status.stories.tsx  upload-item-status.tsx
frontend/src/app/components/upload-wizard/components/upload-wizard-add-files/: upload-wizard-add-files.stories.tsx  upload-wizard-add-files.tsx
frontend/src/app/components/upload-wizard/components/upload-wizard-upload-files/: upload-wizard-upload-files.css  upload-wizard-upload-files.tsx  (+1 more)
frontend/src/app/pages/analysis-results/: analysis-results.css  analysis-results.tsx
frontend/src/app/pages/home-dashboard/: home-dashboard.css  home-dashboard.tsx
frontend/src/app/pages/upload/: upload.css  upload.stories.tsx  upload.tsx
frontend/src/app/services/: chat-service.ts  upload-service.ts
frontend/src/styles/: README.md  colors.ts  globals.css  index.ts  spacing.ts  typography.ts
